# gemini-marketplace

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Clippy.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  gemini-extension.json
.cargo/: config.toml
.specify/memory/: constitution.md
commands/: marketplace.toml
crates/marketplace-core/: Cargo.toml
crates/marketplace-core/src/: lib.rs
crates/marketplace-core/src/cli/: cache.rs  list.rs  mod.rs  search.rs  show.rs  sources.rs  status.rs
crates/marketplace-core/src/marketplace/: error.rs  mod.rs
crates/marketplace-core/src/marketplace/cache/: init.rs  mod.rs  store.rs
crates/marketplace-core/src/marketplace/commands/: cache.rs  list.rs  mod.rs  refresh.rs  search.rs  show.rs  sources.rs  status.rs
crates/marketplace-core/src/marketplace/ingest/: mod.rs  validation.rs
crates/marketplace-core/src/marketplace/models/: api.rs  domain.rs  manifest.rs  mod.rs
crates/marketplace-core/src/marketplace/services/: catalog.rs  mod.rs  preferences.rs  refresh.rs  source_fetcher.rs  sources.rs
crates/marketplace-core/src/telemetry/: mod.rs
crates/marketplace-core/tests/: marketplace_show.rs  schema.rs  telemetry.rs  validation.rs
crates/marketplace-core/tests/common/: http.rs  marketplace.rs  mod.rs
crates/marketplace-core/tests/data/marketplace/cache/: curated_manifest_stale.json
crates/marketplace-core/tests/data/marketplace/curated/: analysis-suite.README.md  curated-analysis-suite.json  curated-observability.README.md
crates/marketplace-core/tests/data/marketplace/custom/: deep-dive.README.md  deep-dive.json  index.json  team-chatops.README.md
crates/marketplace-core/tests/integration/: bootstrap.rs  cache_store.rs  list_extensions.rs  source_fetcher.rs
crates/marketplace-core/tests/integration/marketplace/: list.rs  show.rs
crates/marketplace-core/tests/unit/: config.rs  default_source.rs  domain.rs  error.rs  manifest.rs
crates/marketplace-mcp-cli/: Cargo.toml
crates/marketplace-mcp-cli/src/: main.rs
crates/marketplace-mcp-server/: Cargo.toml
crates/marketplace-mcp-server/src/: lib.rs  main.rs
docs/plans/: 2025-11-18-catchup-skill.md  2025-11-18-speckit-superpowers-integration.md  2025-11-19-api-followups-design.md  2025-11-22-skill-autoload-mcp.md
scripts/: lint-openapi.sh
specs/001-build-a-gemini/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-gemini/checklists/: api-data.md  marketplace-release.md  requirements-quality.md  requirements.md  self-check.md
specs/001-build-a-gemini/contracts/: marketplace-openapi.yaml  marketplace.yaml
src/: lib.rs
src/marketplace/: config.rs  error.rs  mod.rs  status.rs
src/marketplace/api/: extensions.rs  mod.rs  server.rs  sources.rs  status.rs
src/marketplace/cache/: mod.rs  store.rs
src/marketplace/commands/: cache.rs  list.rs  mod.rs  refresh.rs  search.rs  show.rs  sources.rs  status.rs
src/marketplace/models/: domain.rs  manifest.rs  mod.rs
src/marketplace/services/: catalog.rs  mod.rs  preferences.rs  refresh.rs  source_fetcher.rs  sources.rs
tests/: marketplace_help.rs  mcp_cli.rs
tests/common/: http.rs  marketplace.rs  mod.rs
tests/data/marketplace/cache/: curated_manifest.json  custom_manifest.json
tests/data/marketplace/curated/: analysis-suite.README.md  curated-observability.README.md  curated-observability.json  index.json
tests/data/marketplace/custom/: deep-dive.README.md  team-chatops.README.md  team-chatops.json
tests/integration/: api_server.rs  bootstrap.rs  cache_store.rs  cli_parse.rs  list_cli.rs  list_extensions.rs  source_fetcher.rs
tests/integration/marketplace/: help.rs
tests/unit/: config.rs  default_source.rs  lib.rs  preferences.rs
