[package]
name = "gemini-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
name = "gemini_marketplace"
path = "src/lib.rs"

[[bin]]
name = "gemini-marketplace"
path = "src/bin/marketplace.rs"

[features]
default = []
progress-ui = ["indicatif"]

[dependencies]
anyhow = "1.0"
directories = "5.0"
indicatif = { version = "0.17", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
semver = { version = "1.0", features = ["serde"] }
url = "2.5"
humantime = "2.1"
humantime-serde = "1.1"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["macros", "json"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.39", features = ["yaml"] }
predicates = "3.0"
tempfile = "3.10"
