[package]
name = "marketplace-mcp-server"
edition.workspace = true
version.workspace = true

[lib]
name = "marketplace_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "marketplace-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
